src/App.css
@property --bg-angle {
  inherits: false;
  initial-value: 0deg;
  syntax: "<angle>";
}

@keyframes spin {
  to {
    --bg-angle: 360deg;
  }
}

div.letters {
  font-size: 10rem;
  font-weight: 900;
  user-select: none;
  text-align: center;

  animation: spin 30s linear infinite;
  background: conic-gradient(
    from var(--bg-angle) in oklch longer hue,
    oklch(0.75 0.27 0) 0 0
  );

  background-clip: text;
  color: transparent;
  letter-spacing: 0.2rem;
  line-height: 100%;
  word-break: break-all;
}

div.letters::after {
  font-weight: 200;
  color: #999;
  content: "|";
  /* blink animation in css */
  animation: blinker 1s linear infinite;
}

@keyframes blinker {
  0% {
    opacity: 1;
  }
  50% {
    opacity: 0;
  }
  100% {
    opacity: 1;
  }
}

